[workspace]
resolver = "2"
members = [
    "crates/lxmf-core",
    "crates/lxmf-tools",
]

[workspace.package]
version = "0.9.2"
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
# Reticulum crates from a sibling rsReticulum checkout during development.
rns-crypto = { path = "../rsReticulum/crates/rns-crypto" }
rns-wire = { path = "../rsReticulum/crates/rns-wire" }
rns-identity = { path = "../rsReticulum/crates/rns-identity" }
rns-link = { path = "../rsReticulum/crates/rns-link" }
rns-protocol = { path = "../rsReticulum/crates/rns-protocol" }
rns-transport = { path = "../rsReticulum/crates/rns-transport" }
rns-runtime = { path = "../rsReticulum/crates/rns-runtime" }
rns-interface = { path = "../rsReticulum/crates/rns-interface" }

# Workspace LXMF crates
lxmf-core = { path = "crates/lxmf-core" }
lxmf-tools = { path = "crates/lxmf-tools" }

# Encoding
base64 = "0.22"

# Serialization
rmp-serde = "1"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
bytes = "1"

# Crypto
sha2 = "0.10"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"

# Misc
hex = "0.4"
tempfile = "3"

# Testing
proptest = "1"
