[workspace]
resolver = "2"
members = [
    "crates/lxmf-core",
    "crates/lxmf-tools",
]

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
# Reticulum crates from a sibling rsReticulum checkout during development.
rns-crypto = { path = "../rsReticulum/crates/rns-crypto", version = "1.0.1" }
rns-wire = { path = "../rsReticulum/crates/rns-wire", version = "1.0.1" }
rns-identity = { path = "../rsReticulum/crates/rns-identity", version = "1.0.1" }
rns-link = { path = "../rsReticulum/crates/rns-link", version = "1.0.1" }
rns-protocol = { path = "../rsReticulum/crates/rns-protocol", version = "1.0.1" }
rns-transport = { path = "../rsReticulum/crates/rns-transport", version = "1.0.1" }
rns-runtime = { path = "../rsReticulum/crates/rns-runtime", version = "1.0.1" }
rns-interface = { path = "../rsReticulum/crates/rns-interface", version = "1.0.1" }

# Workspace LXMF crates
lxmf-core = { path = "crates/lxmf-core", version = "1.0.1" }
lxmf-tools = { path = "crates/lxmf-tools", version = "1.0.1" }

# Encoding
base64 = "0.22"

# Serialization
rmp-serde = "1"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
bytes = "1"

# Crypto
sha2 = "0.10"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"

# Misc
hex = "0.4"
tempfile = "3"

# Testing
proptest = "1"
